Use standard esm & add a script to process downloads

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "Sivakumar Kailasam <siva@rubberduck.engineering>",
   "main": "index.js",
   "scripts": {
-    "prepack": "node lib/prepare-for-publish.js"
+    "start": "node -r esm lib/index.js",
+    "prepack": "node -r esm lib/prepare-for-publish.js"
   },
   "devDependencies": {
     "compare-versions": "^3.5.1",
+    "esm": "^3.2.25",
     "find-latest-patch-versions": "^0.2.1",
     "find-versions": "^3.1.0",
     "fs-extra": "^8.1.0",
