--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "find-latest-patch-versions": "^0.2.1",
     "find-versions": "^3.1.0",
     "fs-extra": "^8.1.0",
-    "glob": "^7.1.5"
+    "glob": "^7.1.5",
+    "packages-versions": "^1.1.0"
   }
 }
