--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "compare-versions": "^3.5.1",
+    "download": "^7.1.0",
     "esm": "^3.2.25",
     "find-latest-patch-versions": "^0.2.1",
     "find-versions": "^3.1.0",
