--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "find-versions": "^3.1.0",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.5",
-    "packages-versions": "^1.1.0",
-    "url-exists-promise": "^1.0.2"
+    "packages-versions": "^1.1.0"
   }
 }
