--- a/.github/workflows/automated-release.yml
+++ b/.github/workflows/automated-release.yml
@@ -13,21 +13,19 @@ jobs:
     steps:
       - uses: actions/checkout@v1
         name: Checkout code
-      
+
       - name: Cache node modules
         uses: actions/cache@preview
         with:
           path: ~/.cache/yarn
           key: ${{ runner.os }}-yarn-${{ hashFiles(format('{0}{1}', github.workspace, '/yarn.lock')) }}
           restore-keys: |
-            ${{ runner.os }}-yarn- 
-      
-      - name: GitHub Action for Yarn
+            ${{ runner.os }}-yarn-
+
+      - name: Install dependencies
         uses: Borales/actions-yarn@v2.0.0
         with:
           cmd: install
-    
+
       - name: Automated release
         uses: mikeal/merge-release@v4.0.7
-       
-        
