Modify releases workflow to only run on doc changes

--- a/.github/workflows/automated-release.yml
+++ b/.github/workflows/automated-release.yml
@@ -1,6 +1,9 @@
 name: Automated release
 
-on: [push]
+on:
+  push:
+    paths:
+      - 'docs/**/*.json'
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
