--- a/.github/workflows/automated-release.yml
+++ b/.github/workflows/automated-release.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v1
         name: Checkout code
+        
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
 
       - name: Install dependencies
         uses: Borales/actions-yarn@v2.0.0
