--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,10 @@ on:
     - cron: '15 * * * *'
 
 env:
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+  NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
 jobs:
   publish:
@@ -15,13 +18,16 @@ jobs:
       - uses: actions/checkout@v1
         name: Checkout code
 
-      # - name: Cache node modules
-      #   uses: actions/cache@preview
-      #   with:
-      #     path: ~/.cache/yarn
-      #     key: ${{ runner.os }}-yarn-${{ hashFiles(format('{0}{1}', github.workspace, '/yarn.lock')) }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-yarn-
+      - uses: actions/setup-node@v1
+        name: Setup Node.js
+        with:
+          node-version: 12
+
+      - uses: actions/cache@v1
+        with:
+          path: ~/.cache/yarn
+          key: ${{ runner.os }}-yarn-${{ hashFiles(format('{0}{1}', github.workspace, '/yarn.lock')) }}
+          restore-keys: ${{ runner.os }}-yarn-
 
       - name: Install dependencies
         uses: Borales/actions-yarn@v2.0.0
@@ -36,7 +42,10 @@ jobs:
       - name: Commit any changes
         uses: sivakumar-kailasam/git-auto-commit-action@master
         with:
-          commit_message: Add newly identified js doc
+          commit_message: 'docs: Add newly identified js doc'
           branch: ${{ github.head_ref }}
           # Optional glob pattern of files which should be added to the commit
           file_pattern: docs/**/*.json
+
+      - name: Release
+        run: npx semantic-release
