--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -13,25 +13,27 @@ env:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    env:
+      CI: true
 
     steps:
-      - uses: actions/checkout@v1
-        name: Checkout code
+      - name: Set up Volta
+        uses: rwjblue/setup-volta@v1
 
-      - uses: actions/setup-node@v1
-        name: Setup Node.js
+      - name: Set up build cache (yarn)
+        uses: actions/cache@preview
         with:
-          node-version: 12
+          path: ~/.cache/yarn
+          key: ${{ runner.os }}-yarn
+
+      - name: Checkout code
+        uses: actions/checkout@v1
 
       - name: Install dependencies
-        uses: Borales/actions-yarn@v2.0.0
-        with:
-          cmd: install
+        run: yarn install
 
       - name: Run doc fetcher process
-        uses: Borales/actions-yarn@v2.0.0
-        with:
-          cmd: start
+        run: yarn start
 
       - name: Commit any changes
         uses: sivakumar-kailasam/git-auto-commit-action@master
