--- a/.releaserc.json
+++ b/.releaserc.json
@@ -18,14 +18,16 @@
             "release": "patch"
           },
           {
+            "type": "fix",
+            "release": "patch"
+          },
+          {
             "scope": "lib/*,.github/*",
             "release": false
           }
         ]
       }
     ],
-    "@semantic-release/release-notes-generator",
-    "@semantic-release/npm",
-    "@semantic-release/github"
+    "@semantic-release/npm"
   ]
 }
