--- a/.releaserc.json
+++ b/.releaserc.json
@@ -28,6 +28,8 @@
         ]
       }
     ],
-    "@semantic-release/npm"
+    "@semantic-release/github",
+    "@semantic-release/npm",
+    "@semantic-release/release-notes-generator"
   ]
 }
