--- a/.releaserc.json
+++ b/.releaserc.json
@@ -28,8 +28,9 @@
         ]
       }
     ],
+    "@semantic-release/release-notes-generator",
     "@semantic-release/github",
     "@semantic-release/npm",
-    "@semantic-release/release-notes-generator"
+    "@semantic-release/git"
   ]
 }
