--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -44,6 +44,7 @@ jobs:
 
       - name: Release
         env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
         run: npx semantic-release
