--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ember-learn/released-js-docs",
   "version": "1.0.0",
-  "description": "Contains api source docs for ember repositories",
+  "description": "Contains api source docs for ember-source & ember-data",
   "homepage": "https://github.com/ember-learn/released-js-docs#readme",
   "bugs": {
     "url": "https://github.com/ember-learn/released-js-docs/issues"
